@@ -666,10 +666,13 @@ input:focus, textarea:focus, select:focus {
 .g-emailMe-box {
     font-size: 8.5pt;
     background: #fdc;
-    padding: 3px 2px 3px 2px;
     width: 500px;
     margin: 0 2px 3px;
     -moz-border-radius: 5px;
+}
+
+.g-emailMe-box input {
+    margin: 1px;
 }
 
 .g-columnheader, caption {
