@@ -1,3 +1,8 @@
+2007-02-09 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b27
+
+ * New: Added Top5 voted feature. (RFE #929207)
+       "Email me when comments are added -> recursively"
+       
 2007-02-09 Jens Tkotz <jens@peino.de> 1.6-RC1-b26
 
  * Change: Better Wording and handling for mail in config.
